Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11031

Unable to switch header/source files

    XMLWordPrintable

Details

    • 1fd576c1f6fdb96e7c65b7c6fde724e46cee43b2

    Description

      Hi,

      before I was able to switch between header/source, and now for quite some time I can not.

      I do not use that function a lot, but I just wanted to report it, since it was working fine before.

      Thing is that in our system header files are in "inc" subfolder, but that is not what I think is the problem - the problem is that our header files can be used in other binary files, so they do not have exactly same name as source file.

      i.e. if source file is foo.c, and our system name is bar, then files are:

      foo.c
      inc/bar_foo.h

      So it used to work before, but quite some time now it does not work any more.

      Regards,
      Petar

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kosjar Nikolai Kosjar
            pperisin Petar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes